added assets for missing/changed items and updated default item pools